# APAS-VERUS

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  MYONECHANGETOVERUS.txt  README.md  TODO  lib.long-type-14255526454761837052.txt  lib.long-type-17013181479473874471.txt  lib.long-type-1898421725192734203.txt  lib.long-type-5573433030602706144.txt  rustfmt.toml  test_fib.rs  verita.toml
.cargo/: config.toml
.claude/: settings.local.json
.github/: copilot-instructions.md
.verus-log/: crate-simple.vir
.verus-solver-log/: Chap28__MaxContigSubSumOptStEph__MaxContigSubSumOptStEphlib!Chap28.MaxContigSubSumOptStEph.MaxContigSubSumOptStEph.impl&%0.max_contig_sub_sum_opt._01.profile  Chap28__MaxContigSubSumOptStEph__MaxContigSubSumOptStEphlib!Chap28.MaxContigSubSumOptStEph.MaxContigSubSumOptStEph.impl&%0.max_contig_sub_sum_opt._02.profile  Chap28__MaxContigSubSumOptStEph__MaxContigSubSumOptStEphlib!Chap28.MaxContigSubSumOptStEph.MaxContigSubSumOptStEph.impl&%0.max_contig_sub_sum_opt._04.profile
analyses/: 4way-agent-split.md  README.md  VerusificationStatus.md  accept-clone-partialeq-assumes.md  apas-cost-reference-all.toml  apas-cost-reference-ch1-5.toml  apas-cost-reference-ch11-16.toml  apas-cost-reference-ch17-23.toml  apas-cost-reference-ch24-28.toml  apas-cost-reference-ch29-36.toml  apas-cost-reference-ch37-44.toml  apas-cost-reference-ch45-51.toml  apas-cost-reference-ch52-59.toml  apas-cost-reference-ch60-66.toml  bogus-views-review-and-4way-split.md  chap02-41-proof-hole-fixes.md  hashset-to-hashsetwithview-fixes.md  proof-holes-by-directory.md  review-module-fn-impl-spec-strengths.json  review-summary-chap47-57.md  veracity-minimize-lib.log.bad  veracity-review-module-fn-impls.json  veracity-review-module-fn-impls.md
apas_verus_macros/: Cargo.toml
bugs/: verus-f64-bitvector-crash.md  verus-ice-set-type-projection-in-proof-quantifier.md  verus-z3-mut-struct-quantifier-blowup.md
docs/: APAS-VERUSIterators.rs  APASLoops.md  APASVerusCustomIters.md  AlgorithmsListForLiteratureSearch.md  BiconditionalBridge.md  Chap18Review.md  Chap19Review.md  ChapterVerusification.md  ForLoopVerification.md  MergeAgentWorktreesIntoMain.md  Ordering.md  ParaPairDisjointUsage.md  ProofTimeTest.md  RetryingFailedExperiments.md  Scripts.md  UsingVeracitySearchToAvoidDuplication.md  VeracityMinimizeProofsAnalysis.md  VerusEqualityAxioms.md  VerusIfyAPASRust.md  VerusIteratorImpls.md  VerusIters.md  VerusOptimizationsApplied.md  VerusProofPatterns.md  VerusRules.md  VerusStandardAndAPASVerusIters.md  VerusStandardIters.md  VerusStandardLoopProofs.md  VerusStyleForVerification.md  VerusWrappingRust.md  VerusificationStatus.md  VstdTypeSpecs.md  WhatIsTheAPASThreadingModelCosts.md  (+9 more)
rust_verify_test/: Cargo.toml  libtest_crate.rlib
rust_verify_test/tests/Chap02/: HFSchedulerMtEph.rs  WSSchedulerMtEph.rs
rust_verify_test/tests/Chap05/: MappingStEph.rs  ProveKleeneStPer.rs  ProveMappingStEph.rs  ProveRelationStEph.rs  ProveSetMtEph.rs  ProveSetStEph.rs  RelationStEph.rs  SetMtEph.rs  SetStEph.rs  SetStEph_iters.rs
rust_verify_test/tests/Chap06/: ProveDirGraphMtEph.rs  ProveDirGraphStEph.rs  ProveLabDirGraphMtEph.rs  ProveLabDirGraphStEph.rs  ProveLabUnDirGraphMtEph.rs  ProveLabUnDirGraphStEph.rs  ProveUnDirGraphMtEph.rs  ProveUnDirGraphStEph.rs  ProveWeightedDirGraphStEphI128.rs  ProveWeightedDirGraphStEphI16.rs  ProveWeightedDirGraphStEphI32.rs  ProveWeightedDirGraphStEphI64.rs  ProveWeightedDirGraphStEphI8.rs  ProveWeightedDirGraphStEphIsize.rs  ProveWeightedDirGraphStEphU128.rs  ProveWeightedDirGraphStEphU16.rs  ProveWeightedDirGraphStEphU32.rs  ProveWeightedDirGraphStEphU64.rs  ProveWeightedDirGraphStEphU8.rs  ProveWeightedDirGraphStEphUsize.rs
rust_verify_test/tests/Chap17/: ProveMathSeq.rs  prove_MathSeq_iters.rs
rust_verify_test/tests/Chap18/: ProveArraySeq.rs  ProveArraySeqMtEph.rs  ProveArraySeqMtEphSlice.rs  ProveArraySeqMtPer.rs  ProveArraySeqStEph.rs  ProveArraySeqStPer.rs  ProveLinkedListStEph.rs  ProveLinkedListStPer.rs  prove_ArraySeqMtEph_iters.rs  prove_ArraySeqMtPer_iters.rs  prove_ArraySeqStEph_iters.rs  prove_ArraySeqStPer_iters.rs  prove_ArraySeq_iters.rs  prove_LinkedListStEph_iters.rs  prove_LinkedListStPer_iters.rs
rust_verify_test/tests/Chap19/: ProveArraySeqMtEph.rs  ProveArraySeqMtEphSlice.rs  ProveArraySeqStEph.rs  ProveArraySeqStPer.rs
rust_verify_test/tests/Chap23/: ProveBalBinTreeStEph.rs  ProvePrimTreeSeqStPer.rs
rust_verify_test/tests/Chap37/: ProveAVLTreeSeq.rs  ProveAVLTreeSeqMtPer.rs  ProveAVLTreeSeqStEph.rs  ProveAVLTreeSeqStPer.rs  ProveBSTPlainMtEph.rs  ProveBSTRBMtEph.rs  ProveBSTSetAVLMtEph.rs  ProveBSTSetBBAlphaMtEph.rs  ProveBSTSetPlainMtEph.rs  ProveBSTSetRBMtEph.rs  ProveBSTSetSplayMtEph.rs  ProveBSTSplayStEph.rs
rust_verify_test/tests/Chap38/: ProveParamBSTStEph.rs
rust_verify_test/tests/Chap39/: ProveBSTParaTreapMtEph.rs  ProveBSTSetTreapMtEph.rs  ProveBSTTreapMtEph.rs  ProveBSTTreapStEph.rs
rust_verify_test/tests/Chap40/: ProveBSTKeyValueStEph.rs  ProveBSTReducedStEph.rs  ProveBSTSizeStEph.rs
rust_verify_test/tests/Chap41/: ProveAVLTreeSetMtEph.rs  ProveAVLTreeSetMtPer.rs  ProveAVLTreeSetStEph.rs  ProveAVLTreeSetStPer.rs  ProveArraySetStEph.rs  ProveOrdKeyMap.rs
rust_verify_test/tests/Chap42/: ProveTableMtEph.rs  ProveTableStEph.rs  ProveTableStPer.rs
rust_verify_test/tests/Chap43/: ProveAugOrderedTableMtEph.rs  ProveAugOrderedTableStEph.rs  ProveAugOrderedTableStPer.rs  ProveOrderedSetMtEph.rs  ProveOrderedSetStEph.rs  ProveOrderedSetStPer.rs  ProveOrderedTableMtEph.rs  ProveOrderedTableMtPer.rs  ProveOrderedTableStEph.rs  ProveOrderedTableStPer.rs
rust_verify_test/tests/Chap54/: ProveBFSMtEph.rs  ProveBFSStEph.rs
rust_verify_test/tests/common/: mod.rs
rust_verify_test/tests/standards/: ProveDeepViewStandard.rs  ProveIteratorsStandard.rs  ProveViewStandard.rs  Provedeep_view_standard.rs  Provemod_standard.rs  Provetable_of_contents_standard.rs  Proveusing_closures_standard.rs  Proveview_standard.rs  Provewrapping_iterators_standard.rs
rust_verify_test/tests/vstdplus/: HashMapWithViewPlus.rs  HashSetWithViewPlus.rs
(+4449 files in other folders)
